samples/_failures_safe/1761631338_2ecddf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_625b7bb2.c: In function ‘main’:
./samples/SAFE/__tmp_625b7bb2.c:143:32: error: expected ‘;’ at end of input
  143 |     poly.coefficients[1] = -3.0
      |                                ^
      |                                ;
./samples/SAFE/__tmp_625b7bb2.c:143:5: error: expected declaration or statement at end of input
  143 |     poly.coefficients[1] = -3.0
      |     ^~~~
